--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <html ng-app="projectRtc">
   <head>
     <title><%= title %></title>
-
+	<script type="text/javascript" src="https://cdn.staticfile.org/angular.js/1.4.6/angular.min.js">
+	</script>
 	<script type="text/javascript" src="javascripts/app.js"></script>
   </head>
   <body>
